<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.graphics.Color" />

        <variable
            name="viewModel"
            type="com.nkuppan.expensemanager.presentation.account.create.AccountCreateViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/appbar_elevation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_close" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:hint="@string/account_name"
                app:checkErrorMessage="@{viewModel.accountName}"
                app:error="@{viewModel.accountNameErrorText}"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={viewModel.accountName}"
                    android:textColorHint="#757575" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/color_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:onClick="@{() -> viewModel.onColorContainerClick()}"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_name_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/color_value"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:background="@{Color.parseColor(viewModel.colorValue)}"
                    android:text="@string/today"
                    tools:background="?attr/colorSecondary" />
            </LinearLayout>

            <TextView
                android:id="@+id/account_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/account_type"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/color_container" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/account_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:orientation="horizontal"
                app:checkedChip="@id/card"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/account_type_title"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/card"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/card"
                    app:checkedIcon="@drawable/ic_card"
                    app:checkedIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/wallet"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/wallet"
                    app:checkedIcon="@drawable/ic_wallet"
                    app:checkedIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/upi"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/upi"
                    app:checkedIcon="@drawable/ic_upi"
                    app:checkedIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cheque"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/cheque"
                    app:checkedIcon="@drawable/ic_cheque"
                    app:checkedIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/internet_banking"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/internet_banking"
                    app:checkedIcon="@drawable/ic_netbanking"
                    app:checkedIconVisible="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bank_account"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:text="@string/bank_account"
                    app:checkedIcon="@drawable/ic_bank"
                    app:checkedIconVisible="true" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:contentDescription="@string/save_account"
            android:src="@drawable/ic_save"
            app:layout_anchor="@id/content"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>