<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.graphics.Color" />

        <variable
            name="viewModel"
            type="com.nkuppan.expensemanager.presentation.category.create.CategoryCreateViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="@dimen/appbar_elevation">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_close" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/category_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:hint="@string/category_name"
                app:checkErrorMessage="@{viewModel.categoryName}"
                app:error="@{viewModel.categoryNameErrorText}"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category_name"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:text="@={viewModel.categoryName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/color_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:onClick="@{() -> viewModel.onColorContainerClick()}"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_name_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/color"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/color_value"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:background="@{Color.parseColor(viewModel.colorValue)}"
                    android:text="@string/today" />
            </LinearLayout>

            <TextView
                android:id="@+id/category_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:text="@string/category_type"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/color_container" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/category_type_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16dp"
                android:orientation="horizontal"
                app:checkedButton="@id/expense_option"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/category_type_title"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expense_option"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/expense" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/income_option"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_16dp"
                    android:layout_marginRight="@dimen/margin_16dp"
                    android:layout_weight="1"
                    android:text="@string/income" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:contentDescription="@string/add"
            android:src="@drawable/ic_save"
            app:layout_anchor="@id/content"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>