<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.nkuppan.expensemanager.presentation.transaction.search.SearchViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/listChoiceBackgroundIndicator"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{() -> viewModel.backNavigation()}"
                    android:padding="@dimen/margin_12dp"
                    app:srcCompat="@drawable/ic_arrow_back" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/search_view"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@{viewModel.searchHintText}"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewModel.searchText}"
                    android:textColorHint="#b3b3b3"
                    android:textSize="18sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/listChoiceBackgroundIndicator"
                    android:contentDescription="@string/clear_text"
                    android:onClick="@{() -> viewModel.clearSearch()}"
                    android:padding="@dimen/margin_12dp"
                    android:visibility="@{viewModel.searchText.empty ? View.GONE : View.VISIBLE}"
                    app:srcCompat="@drawable/ic_close" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/listChoiceBackgroundIndicator"
                    android:contentDescription="@string/voice_search"
                    android:onClick="@{() -> viewModel.voiceSearch()}"
                    android:padding="@dimen/margin_12dp"
                    android:visibility="@{viewModel.searchText.empty ? View.VISIBLE : View.GONE}"
                    app:srcCompat="@drawable/ic_voice" />
            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <FrameLayout
                android:id="@+id/place_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>